--- a/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
+++ b/spring-security/spring-security-006-login-register-process/src/main/resources/templates/setting/AS001-registration.html
@@ -1,202 +1,97 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
 	xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{/common/layout}">
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<!-- Bootstrap CSS -->
-<link rel="icon"
-	href="https://getbootstrap.com/docs/4.3/assets/img/favicons/favicon-32x32.png"
-	sizes="32x32" type="image/png">
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-	integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-	crossorigin="anonymous">
-<!-- Font Awesome -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.css" />
-
 <title>Spring Security</title>
-<style type="text/css">
-.field-icon {
-	float: right;
-	margin-left: -25px;
-	margin-right: 5px;
-	margin-top: -25px;
-	position: relative;
-	z-index: 2;
-}
-</style>
+<link rel="stylesheet" th:href="@{/static/css/pwd-eye.css}" />
 </head>
 <body>
-	<header>
-		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-info">
-			<a class="navbar-brand" href="S001-home.html">Spring Security</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarsExampleDefault"
-				aria-controls="navbarsExampleDefault" aria-expanded="false"
-				aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
+	<div class="row justify-content-center" layout:fragment="content">
+		<div class="col-md-6 ">
+			<form class="p-4" th:action="@{/do-registration}" th:method="post"
+				th:object="${dto}">
+				<h5 class="pb-2">REGISTER</h5>
 
-			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item"><a class="nav-link"
-						href="../S001-home.html"><i class="fa fa-home mr-1"></i>Home </a></li>
-				</ul>
+				<div id="msgArea" th:include="/common/messages.html::messages"></div>
 
-				<div class="my-2 my-lg-0">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active"><a class="nav-link"
-							th:href="@{/do-registration}"><i
-								class="fa fa-registered mr-1"></i>Register </a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/login}"><i
-								class="fa fa-sign-in-alt mr-1"></i>Login </a></li>
-					</ul>
+				<div class="row">
+					<div class="col-md-6">
+						<div class="form-group">
+							<i class="fas fa-user"></i> <label class="mb-0"
+								for="txtFitstName" th:text="#{lblFirstName}"></label><input
+								type="text" th:field="*{firstName}" id="txtFitstName"
+								class="form-control form-control-sm"
+								th:classappend="${#fields.hasErrors('firstName')} ? border-danger"
+								autofocus="autofocus" autocomplete="off"> <small
+								class="text-danger" th:if="${#fields.hasErrors('firstName')}"
+								th:errors="*{firstName}"></small>
+
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="form-group">
+							<i class="fas fa-user"></i> <label class="mb-0" for="txtLastName"
+								th:text="#{lblLastName}"></label><input type="text"
+								th:field="*{lastName}" id="txtLastName"
+								class="form-control form-control-sm"
+								th:classappend="${#fields.hasErrors('lastName')} ? border-danger"
+								autocomplete="off"> <small class="text-danger"
+								th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></small>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="form-group">
+							<i class="fas fa-envelope"></i> <label class="mb-0"
+								for="txtEmail" th:text="#{lblEmail}"> </label><input type="text"
+								id="txtEmail" th:field="*{email}"
+								class="form-control form-control-sm"
+								th:classappend="${#fields.hasErrors('email')} ? border-danger"
+								autocomplete="off"> <small class="text-danger"
+								th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="form-group">
+							<i class="fas fa-unlock-alt"></i> <label class="mb-0"
+								for="txtPassword" th:text="#{lblPassword}"></label><input
+								type="password" th:field="*{password}" id="txtPassword"
+								class="form-control form-control-sm"
+								th:classappend="${#fields.hasErrors('password')} ? border-danger"
+								autocomplete="off"><span toggle="#txtPassword"
+								class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+								class="text-danger" th:if="${#fields.hasErrors('password')}"
+								th:errors="*{password}"></small>
+						</div>
+					</div>
+					<div class="col-md-12">
+						<div class="form-group">
+							<i class="fas fa-unlock-alt"></i> <label class="mb-0"
+								for="txtConfirmPassword" th:text="#{lblConfirmPassword}"></label><input
+								type="password" th:field="*{confirmPassword}"
+								id="txtConfirmPassword" class="form-control form-control-sm"
+								th:classappend="${#fields.hasErrors('confirmPassword')} ? border-danger"
+								autocomplete="off"><span toggle="#txtConfirmPassword"
+								class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
+								class="text-danger"
+								th:if="${#fields.hasErrors('confirmPassword')}"
+								th:errors="*{confirmPassword}"></small>
+						</div>
+					</div>
 				</div>
-
-			</div>
-		</nav>
-	</header>
-
-
-	<div class="container-fluid">
-		<div class="jumbotron-fluid"
-			style="min-height: 100vh; padding-top: 4rem; margin-bottom: 0px;">
-			<div class="row justify-content-center">
-				<div class="col-md-6 ">
-					<form class="p-4" th:action="@{/do-registration}" th:method="post"
-						th:object="${dto}">
-						<h5 class="pb-2">REGISTER</h5>
-
-						<div th:if="${messages}">
-							<div class="alert alert-success alert-dismissible fade show">
-								<small th:text="#{${messages}}"></small>
-								<button type="button" class="close" data-dismiss="alert"
-									aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-						</div>
-						<div th:if="${errors}">
-							<div class="alert alert-danger alert-dismissible fade show">
-								<small th:text="#{${errors}}"></small>
-								<button type="button" class="close" data-dismiss="alert"
-									aria-label="Close">
-									<span aria-hidden="true">&times;</span>
-								</button>
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="col-md-6">
-								<div class="form-group">
-									<i class="fas fa-user"></i> <label class="mb-0"
-										for="txtFitstName" th:text="#{lblFirstName}"></label><input
-										type="text" th:field="*{firstName}" id="txtFitstName"
-										class="form-control form-control-sm"
-										th:classappend="${#fields.hasErrors('firstName')} ? border-danger"
-										autofocus="autofocus" autocomplete="off"> <small
-										class="text-danger" th:if="${#fields.hasErrors('firstName')}"
-										th:errors="*{firstName}"></small>
-
-								</div>
-							</div>
-							<div class="col-md-6">
-								<div class="form-group">
-									<i class="fas fa-user"></i> <label class="mb-0"
-										for="txtLastName" th:text="#{lblLastName}"></label><input
-										type="text" th:field="*{lastName}" id="txtLastName"
-										class="form-control form-control-sm"
-										th:classappend="${#fields.hasErrors('lastName')} ? border-danger"
-										autocomplete="off"> <small class="text-danger"
-										th:if="${#fields.hasErrors('lastName')}"
-										th:errors="*{lastName}"></small>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<i class="fas fa-envelope"></i> <label class="mb-0"
-										for="txtEmail" th:text="#{lblEmail}"> </label><input
-										type="text" id="txtEmail" th:field="*{email}"
-										class="form-control form-control-sm"
-										th:classappend="${#fields.hasErrors('email')} ? border-danger"
-										autocomplete="off"> <small class="text-danger"
-										th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></small>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-										for="txtPassword" th:text="#{lblPassword}"></label><input
-										type="password" th:field="*{password}" id="txtPassword"
-										class="form-control form-control-sm"
-										th:classappend="${#fields.hasErrors('password')} ? border-danger"
-										autocomplete="off"><span toggle="#txtPassword"
-										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
-										class="text-danger" th:if="${#fields.hasErrors('password')}"
-										th:errors="*{password}"></small>
-								</div>
-							</div>
-							<div class="col-md-12">
-								<div class="form-group">
-									<i class="fas fa-unlock-alt"></i> <label class="mb-0"
-										for="txtConfirmPassword" th:text="#{lblConfirmPassword}"></label><input
-										type="password" th:field="*{confirmPassword}"
-										id="txtConfirmPassword" class="form-control form-control-sm"
-										th:classappend="${#fields.hasErrors('confirmPassword')} ? border-danger"
-										autocomplete="off"><span toggle="#txtConfirmPassword"
-										class="fa fa-fw fa-eye field-icon toggle-password"></span> <small
-										class="text-danger"
-										th:if="${#fields.hasErrors('confirmPassword')}"
-										th:errors="*{confirmPassword}"></small>
-								</div>
-							</div>
-						</div>
-						<div class="row justify-content-center pt-3">
-							<a class="btn btn-sm btn-secondary mr-2 col-md-2"
-								href="@{/login}">Cancel</a>
-							<button type="submit"
-								class="btn btn-sm btn-secondary mr-2 col-md-2">Register</button>
-						</div>
-					</form>
+				<div class="row justify-content-center pt-3">
+					<a class="btn btn-sm btn-secondary mr-2 col-md-2" href="@{/login}">Cancel</a>
+					<button type="submit"
+						class="btn btn-sm btn-secondary mr-2 col-md-2">Register</button>
 				</div>
-			</div>
+			</form>
 		</div>
 	</div>
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script
-		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
-
-	<script type="text/javascript">
-		debugger
-		$(".toggle-password").click(function() {
-
-			$(this).toggleClass("fa-eye fa-eye-slash");
-			var input = $($(this).attr("toggle"));
-			if (input.attr("type") == "password") {
-				input.attr("type", "text");
-			} else {
-				input.attr("type", "password");
-			}
-		});
-	</script>
+	<th:block layout:fragment="script">
+		<script th:src="@{/static/js/pwd-eye.js}"></script>
+	</th:block>
 </body>
 </html>
